src/test/test-models/bad/declare-define-var-int.stan
data {
  real a1;
}
transformed data {
  int td_a1 = a1;
}
